# VRR_CMAKE

./: .gitignore
Source/Falcor/Core/: Plugin.cpp  Plugin.h  Window.h
Source/Falcor/RenderGraph/: RenderGraph.cpp  RenderGraphCompiler.cpp
Source/RenderPasses/: CMakeLists.txt
Source/RenderPasses/DeferredShading/: CMakeLists.txt  DeferredShading.cpp  DeferredShading.cs.slang  DeferredShading.h
Source/RenderPasses/GBuffer/GBuffer/: GBufferRaster.3d.slang
Source/Samples/: CMakeLists.txt
Source/Samples/EncodeDecode/: CMakeLists.txt  EncodeDecode copy.cpp  EncodeDecode.cpp  EncodeDecode.h  EncodeDecode.rt.slang  EncodeDecode_.cpp  EncodeDecode_motion.cpp  FramePresenterD3D.h  FramePresenterD3D11.h  experiment.sh
